--- a/index.html
+++ b/index.html
@@ -4,10 +4,24 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>InteRyzen</title>
+    <script type="text/javascript">
+      function googleTranslateElementInit() {
+        new google.translate.TranslateElement(
+          {
+            pageLanguage: 'pt', 
+            includedLanguages: 'en,es,fr,de,it', 
+            layout: google.translate.TranslateElement.InlineLayout.SIMPLE
+          }, 
+          'google_translate_element'
+        );
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
+    <div id="google_translate_element" style="display: none;"></div>
+    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
