--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <link rel="shortcut icon" href="./src/assets/images/logo_interyzen.svg" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>InteRyzen</title>
     <script type="text/javascript">
       function googleTranslateElementInit() {
